Finished some of the marketing page

--- a/index.html
+++ b/index.html
@@ -25,15 +25,44 @@
             </div>
         </header>
     
-        <div class="pageContainer">
+        <div class="pageContainer"> <!-- FLEX THIS -->
 
         <!-- CONTENT -->
-        <main>
-
+        <main> <!-- LEFT: Set Width to 48% -->
+            <div class="box">
+                <h2>Volunteers</h2>
+                <div class="flex-image">
+                <img src="volunteer.jpg" alt="Volunteer on School in the Cloud" />
+                <p>Are you out of the game? No worries! We're here to provide you with the tools to connect with students
+                    that need your mentorship, training, and knowledge. Register Today!
+                </p>
+                </div>
+                <a href="register" title="Register Today">Register</a>
+            </div>
+            <div class="box">
+                <h2>Students</h2>
+                <div class="flex-image">
+                <img src="student.jpg" alt="Students on School in the Cloud" />
+                <p>Do you need to learn something? To learn anything? We've got the mentors and instructors to make that
+                    happen. How about some Ninjitsu... or fishing? Need help with Algebra? Find your course! Register
+                    Today!
+                </p>
+                </div>
+                <a href="register" title="Register Today">Register</a>
+            </div>
         </main>
 
-        <section>
-
+        <section> <!-- RIGHT: Set Width to 48% -->
+            <div class="box">
+                <h2>Admins</h2>
+                <div class="flex-image">
+                <img src="admin.jpg" alt="Be an Admin on School in the Cloud" />
+                <p>Help to facilitate the volunteers with features such as "to-do lists" and more. Register Today as an
+                    Admin.
+                </p>
+                </div>
+                <a href="register" title="Register Today">Register</a>
+            </div>
         </section>
     
         <!-- FOOTER -->
