Added content to Marketing Page

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <div class="pageContainer"> <!-- FLEX THIS -->
 
         <!-- CONTENT -->
+        <div class="sixty">
         <main> <!-- LEFT: Set Width to 48% -->
             <div class="box">
                 <h2>Volunteers</h2>
@@ -50,9 +51,6 @@
                 </div>
                 <a href="register" title="Register Today">Register</a>
             </div>
-        </main>
-
-        <section> <!-- RIGHT: Set Width to 48% -->
             <div class="box">
                 <h2>Admins</h2>
                 <div class="flex-image">
@@ -63,13 +61,59 @@
                 </div>
                 <a href="register" title="Register Today">Register</a>
             </div>
+        </main>
+        </div>
+        <div class="forty">
+        <section> <!-- RIGHT: Set Width to 48% -->
+            <div class="box box2">
+                <h2>Top 5 Classes Today</h2>
+                <div class="flex-courses">
+                <img src="Ninjitsu.jpg" alt="Learn Ninjitsu Today" />
+                <p class="description">Learn the art of Ninjitsu Today<br />
+                    <span style="font-size:1rem; font-weight:none; color:#454545">Read More</span>
+                </p>
+                <p class="price">$30.00
+                </p>
+                </div>
+
+                <div class="flex-courses">
+                    <img src="fishing.jpg" alt="Learn Fishing Today" />
+                    <p class="description">Learn to fish like a pro Today<br />
+                        <span style="font-size:1rem; font-weight:none; color:#454545">Read More</span>
+                    </p>
+                    <p class="price">$25.00
+                    </p>
+                </div>
+
+                <div class="flex-courses">
+                    <img src="lab.jpg" alt="Learn Scinece Today" />
+                    <p class="description">Learn the best Science Fair Projects Today<br />
+                        <span style="font-size:1rem; font-weight:none; color:#454545">Read More</span>
+                    </p>
+                    <p class="price">$10.00
+                    </p>
+                </div>
+
+                <div class="flex-courses">
+                    <img src="computer.jpg" alt="Learn Basic Computers Today" />
+                    <p class="description">Learn Basic Computer Fundamentals Today<br />
+                        <span style="font-size:1rem; font-weight:none; color:#454545">Read More</span>
+                    </p>
+                    <p class="price"><span style="color:darkGreen">FREE</span>
+                    </p>
+                </div>
+
+                <div class="flex-courses">
+                    <img src="stocks.jpg" alt="Learn How to Trade Stocks Today" />
+                    <p class="description">Learn How to Trade Stocks Today<br />
+                        <span style="font-size:1rem; font-weight:none; color:#454545">Read More</span>
+                    </p>
+                    <p class="price">$100.00
+                    </p>
+                </div>
+            </div>
         </section>
-    
-        <!-- FOOTER -->
-        <footer>
-
-        </footer>
-
+        </div>
     </div>
 
 </body>
