--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>School in the Cloud | Senior Mentorship Program</title>
     <link rel="stylesheet" href="css/index.css" />
     <link href="https://fonts.googleapis.com/css2?family=Courgette&family=Piedra&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -25,10 +26,10 @@
             </div>
         </header>
     
-        <div class="pageContainer"> <!-- FLEX THIS -->
+    <div class="pageContainer"> <!-- FLEX THIS -->
 
         <!-- CONTENT -->
-        <div class="sixty">
+        <div class="sixty onehundred">
         <main> <!-- LEFT: Set Width to 48% -->
             <div class="box">
                 <h2>Volunteers</h2>
@@ -38,7 +39,9 @@
                     that need your mentorship, training, and knowledge. Register Today!
                 </p>
                 </div>
+                <div class="button">
                 <a href="register" title="Register Today">Register</a>
+                </div>
             </div>
             <div class="box">
                 <h2>Students</h2>
@@ -49,7 +52,9 @@
                     Today!
                 </p>
                 </div>
+                <div class="button">
                 <a href="register" title="Register Today">Register</a>
+                </div>
             </div>
             <div class="box">
                 <h2>Admins</h2>
@@ -59,11 +64,13 @@
                     Admin.
                 </p>
                 </div>
+                <div class="button">
                 <a href="register" title="Register Today">Register</a>
+                </div>
             </div>
         </main>
         </div>
-        <div class="forty">
+        <div class="forty onehundred">
         <section> <!-- RIGHT: Set Width to 48% -->
             <div class="box box2">
                 <h2>Top 5 Classes Today</h2>
@@ -115,6 +122,15 @@
         </section>
         </div>
     </div>
+
+    <footer>
+        <nav class="footer">
+            <a href="index.html" title="Homepage">Home</a>
+            <a href="about.html" title="About the Team">About</a>
+            <a href="contact.html" title="Contact Us">Contact</a>
+            <a href="login.html" title="Login">Login</a>
+        </nav>
+    </footer>
 
 </body>
 
