--- a/about.html
+++ b/about.html
@@ -26,57 +26,67 @@
             </div>
         </header>
     
-    <div class="pageContainer"> <!-- FLEX THIS -->
+    <div class="pageContainer2"> <!-- FLEX THIS -->
         <div class="about100">
-            <section class="topAbout"> <!-- Standalone Team Member to even out odd number of Team Members -->
-                <img src="Nicholas.png" alt="About Nicholas Gallucci" />
+            <section class="topAbout box"> <!-- Standalone Team Member to even out odd number of Team Members -->
                 <h2>Nicholas Gallucci</h2>
-                <h3>About Nicholas Gallucci</h3>
-                <p>About will go here</p>
-                <h3>Skills</h3>
-                <p>Skill will go here</p>
+                <div class="insideFlex">
+                <img src="Nicholas.png" alt="About Nicholas Gallucci" />
+                <div class="flexColumn">
+                <h3>Nick's Role</h3>
+                <p>Nick is the Project lead on School in the Cloud</p>
+                </div>
+                </div>
             </section>
         </div>
+        <div class="flex">
         <div class="about50">
-            <section class="about">
-                <img src="https://avatars3.githubusercontent.com/u/46545674?s=400&u=314a7b4760caa622b2c6e57de5714cc9e6b81dc3&v=4" alt="About Dino Muratovic" />
+            <section class="about box">
                 <h2>Dino Muratovic</h2>
-                <h3>About Dino Muratovic</h3>
-                <p>About will go here</p>
-                <h3>Skills</h3>
-                <p>Skills will go here</p>
+                <div class="insideFlex">
+                <img src="https://avatars3.githubusercontent.com/u/46545674?s=400&u=314a7b4760caa622b2c6e57de5714cc9e6b81dc3&v=4" alt="About Dino Muratovic" />
+                <div class="flexColumn">
+                <h3>Dino's Role</h3>
+                <p>Dino is a Front End React 2 Unit 3 Developer</p>
+                </div>
+                </div>  
             </section>
 
-            <section class="about">
+            <section class="about box">
+                <h2>Keyeric Bristol</h2>
+                <div class="insideFlex">
                 <img src="https://avatars3.githubusercontent.com/u/48074979?s=400&u=3f443df377fb9bbe8f7a677ed8ce774b014f9634&v=4" alt="About Key Bristol" />
-                <h2>Key Bristol</h2>
-                <h3>About Key Bristol</h3>
-                <p>About will go here</p>
-                <h3>Skills</h3>
-                <p>Skills will go here</p>
+                <div class="flexColumn">
+                <h3>Key's Role</h3>
+                <p>Key is a Back End Unit 4 Developer</p>
+            </div>
+        </div>
             </section>
         </div>
 
         <div class="about50">
-            <section class="about">
-                <img src="Dan.jpg" alt="About Dan Brioli" />
+            <section class="about box">
                 <h2>Daniel Brioli</h2>
-                <h3>About Dan Brioli</h3>
-                <p>About will go here</p>
-                <h3>Skills</h3>
-                <p>Skills will go here</p>
+                <div class="insideFlex">
+                <img src="Dan.jpg" alt="About Dan Brioli" />
+                <div class="flexColumn">
+                <h3>Dan's Role</h3>
+                <p>Dan is a Front End React 1 Unit 2 Developer</p>
+            </div>
+        </div>
             </section>
 
-            <section class="about">
-                <img src="Me%202.jpg" alt="About Donald Faulknor" />
+            <section class="about box">
                 <h2>Donald Faulknor</h2>
-                <h3>About Donald Faulknor</h3>
-                <p>Donald Faulknor is a father of 4 kids and lives in Central Florida. Donald found his passion in
-                    programming in 2008. Donald is enrolled in Lambda school to further his knowledge in programming.
-                </p>
-                <h3>Skills</h3>
-                <p>Skills include HTML, CSS, JavaScript, PHP, MySQL, Ajax, C++, Ruby, and Python.</p>
+                <div class="insideFlex">
+                <img src="Me%202.jpg" alt="About Donald Faulknor" />
+                <div class="flexColumn">
+                <h3>Donald's Role</h3>
+                <p>Donald is a User Interface Unit 1 Developer</p>
+            </div>
+        </div>
             </section>
+        </div>
         </div>
 
     </div>
