--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <!-- CONTENT -->
         <div class="sixty onehundred">
-        <main> <!-- LEFT: Set Width to 48% -->
+        <main class="homeMain"> <!-- LEFT: Set Width to 48% -->
             <div class="box">
                 <h2>Volunteers</h2>
                 <div class="flex-image">
@@ -71,7 +71,7 @@
         </main>
         </div>
         <div class="forty onehundred">
-        <section> <!-- RIGHT: Set Width to 48% -->
+        <section class="homeSection"> <!-- RIGHT: Set Width to 48% -->
             <div class="box box2">
                 <h2>Top 5 Classes Today</h2>
                 <div class="flex-courses">
