Completed Contact Page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </p>
                 </div>
                 <div class="button">
-                <a href="register" title="Register Today">Register</a>
+                <a class="homePageLink" href="register" title="Register Today">Register</a>
                 </div>
             </div>
             <div class="box">
@@ -53,7 +53,7 @@
                 </p>
                 </div>
                 <div class="button">
-                <a href="register" title="Register Today">Register</a>
+                <a class="homePageLink" href="register" title="Register Today">Register</a>
                 </div>
             </div>
             <div class="box">
@@ -65,7 +65,7 @@
                 </p>
                 </div>
                 <div class="button">
-                <a href="register" title="Register Today">Register</a>
+                <a class="homePageLink" href="register" title="Register Today">Register</a>
                 </div>
             </div>
         </main>
@@ -106,7 +106,7 @@
                     <p class="description">Learn Basic Computer Fundamentals Today<br />
                         <span style="font-size:1rem; font-weight:none; color:#454545">Read More</span>
                     </p>
-                    <p class="price"><span style="color:darkGreen">FREE</span>
+                    <p class="price"><span style="color:darkGreen; font-weight:bold">FREE</span>
                     </p>
                 </div>
 
