--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <a href="index.html" title="Homepage">Home</a>
                     <a href="about.html" title="About the Team">About</a>
                     <a href="contact.html" title="Contact Us">Contact</a>
-                    <a href="login.html" title="Login">Login</a>
+                    <a href="https://schoolincloudrocks.now.sh/" title="Login">Login</a>
                 </nav>
             
             </div>
@@ -128,7 +128,7 @@
             <a href="index.html" title="Homepage">Home</a>
             <a href="about.html" title="About the Team">About</a>
             <a href="contact.html" title="Contact Us">Contact</a>
-            <a href="login.html" title="Login">Login</a>
+            <a href="https://schoolincloudrocks.now.sh/" title="Login">Login</a>
         </nav>
     </footer>
 
